--- a/DueDate/trunk/res/layout-land/main.xml
+++ b/DueDate/trunk/res/layout-land/main.xml
@@ -10,10 +10,10 @@
     <TextView
     android:id="@+id/TxtView_Start"
     android:text="StartDate"
-    android:layout_width="200dip"
+    android:layout_width="wrap_content"
     android:layout_height="50dip"
     android:textSize="18sp"
-    android:layout_x="180dip"
+    android:layout_x="150dip"
     android:layout_y="5dip"
     android:textStyle="bold"
     android:textColor="#2F4E6F"
@@ -66,10 +66,10 @@
     <TextView
     android:id="@+id/TxtView_Result"
     android:text="DueDate"
-    android:layout_width="200dip"
+    android:layout_width="wrap_content"
     android:layout_height="50dip"
-    android:textSize="18sp"
-    android:layout_x="180dip"
+    android:textSize="24sp"
+    android:layout_x="150dip"
     android:layout_y="235dip"
     android:textStyle="bold"
     android:textColor="#FF6600"
